deploy/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gym-log-book
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: gym.british-information-technologies.org
      http:
        paths:
          - path: /rpc
            pathType: Prefix
            backend:
              service:
                name: gym-log-book-server-stable
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gym-log-book-web-stable
                port:
                  number: 80
  tls:
    - hosts:
        - gym.british-information-technologies.org
      secretName: gym-log-book-tls
